src/objects/Partner_ProgramItem__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active(?)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LMS_Training_Bundle_Id__c</fullName>
        <label>LMS Training Bundle Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMS_Training_Bundle__c</fullName>
        <label>LMS Training Bundle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <picklist>
            <picklistValues>
                <fullName>Zebra APAC RMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zebra APAC USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zebra EMEA USD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Program__c</fullName>
        <label>Partner Program</label>
        <referenceTo>Partner_Program__c</referenceTo>
        <relationshipLabel>Partner Program Items</relationshipLabel>
        <relationshipName>Partner_Program_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Subfamily_1__c</fullName>
        <label>Product Subfamily</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Subfamily__c</fullName>
        <label>Product Subfamily</label>
        <referenceTo>Product_Model__c</referenceTo>
        <relationshipLabel>Partner Program Items</relationshipLabel>
        <relationshipName>Partner_Program_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchasing_Method__c</fullName>
        <label>Purchasing Method</label>
        <picklist>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indirect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Siebel_ROW_ID__c</fullName>
        <externalId>true</externalId>
        <label>Siebel ROW ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_no_of_Trainings__c</fullName>
        <label>Target no. of Trainings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Validity__c</fullName>
        <label>Validity(Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Partner Program Item</label>
    <nameField>
        <label>Partner Program Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Program Items</pluralLabel>
    <recordTypes>
        <fullName>Product_Family</fullName>
        <active>true</active>
        <label>Product Family</label>
    </recordTypes>
    <recordTypes>
        <fullName>Training_Bundle</fullName>
        <active>true</active>
        <label>Training Bundle</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>